--- a/FRONTEND/src/components/ExploreMenu/ExploreMenu.css
+++ b/FRONTEND/src/components/ExploreMenu/ExploreMenu.css
@@ -4,7 +4,7 @@
     margin-top: 80px;
 }
   
-.foodTruck {
+.foodTruckS {
     display: flex;
     flex-direction: column;
     width: 80%;
@@ -16,9 +16,9 @@
     margin: auto;
 }
   
-.foodTruck img {
+.foodTruckS img {
     width: 100%;
-    height: 22vw;
+    height: 28vw;
     object-fit: cover;
     border-radius: 8px;
     margin:auto;
