--- a/FRONTEND/src/components/ExploreMenu/ExploreMenu.css
+++ b/FRONTEND/src/components/ExploreMenu/ExploreMenu.css
@@ -60,7 +60,7 @@
 
 .ExploreMenu .add-to-cart-button{
   padding: 10px;
-  background-color:orange;
+  background-color:#ff7f32;
   font-size: 15px;
   border: none;
   color: white;
